flask_new.log
nohup: ignoring input
 * Serving Flask app 'app'
 * Debug mode: on
WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://10.0.2.170:5000
Press CTRL+C to quit
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 136-142-515
127.0.0.1 - - [01/Oct/2025 19:03:20] "GET /health HTTP/1.1" 200 -
127.0.0.1 - - [01/Oct/2025 19:04:25] "GET /api/consensus HTTP/1.1" 200 -
 * Detected change in '/workspaces/codespaces-blank/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 136-142-515
 * Detected change in '/workspaces/codespaces-blank/app.py', reloading
 * Restarting with stat
  File "/workspaces/codespaces-blank/app.py", line 32
    for league, url in urls.items():
    ^
IndentationError: expected an indented block after 'for' statement on line 30
